# ActiveSampler

./: .gitignore  Dummy_CSV_Table.csv  README.md  Updated_Varied_Cs_Sb_I_Data.csv  active_sampler.py  pyproject.toml  requirements.txt  setup.cfg
examples/example1_LARP/: example1.py  input.csv  selected_samples_LARP.csv  selected_samples_LARP.txt
examples/example2_PhobicSurfaces/: example2.py  input.csv  selected_samples_PhobicSurfaces.csv  selected_samples_PhobicSurfaces.txt
examples/example3_BatteryOptimization/: example3.py  input.csv  selected_samples_BatteryOptimization.csv  selected_samples_BatteryOptimization.txt
examples/example4_ProcessingAndConstraints/: example4.py  input.csv  selected_samples_LARP_advanced_features.csv  selected_samples_LARP_advanced_features.txt
src/active_sampler/: utils.py
src/active_sampler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
