[metadata]
name = active_sampler
version = 0.1.0
author = Rogerio Gouvea
author_email = rogeriog.em@gmail.com
description = An active learning package for experimental design in chemistry and materials science.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogeriog/active_sampler  # Replace with your repository URL
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    pandas>=1.3
    scikit-learn>=1.0
    xgboost>=1.5
    scipy>=1.7

[options.packages.find]
where = src

[options.package_data]
active_sampler = *.csv
